# nlp-to-sql

./: .dockerignore  .env.example  .gitignore  DockerFile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
app/: api.py  streamlit_app.py
core/: config.py  graph.py  logger.py  orchestrator.py
database/: connection.py  data_access.py  executor.py  schema.sql  seed.py  validator.py
llm/: classifier.py  client_groq.py  context_resolver.py  description_prompts.md  generator.py  interpreter.py  postgresql_syntax.py  prompts.py
